 - Fix a number of bugs in problem zip import.
 - Fix permissions of compare build/run scripts.
 - Fix various minor HTML issues.
 - Small tweaks to team manual.
 - Bring admin manual up to date wrt. executables in database.
 - [security] Disable GCC family automatic language detection to
   prevent submitting other languages or object/executable code.

Version 5.0.1 - 1 October 2015
------------------------------
 - Fix issue where syntax highlighting would omit empty lines at the
   beginning of a source file (#177).
 - Make users table also sortable by user status.
 - Update documentation to accurately describe the problem package
   format DOMjudge supports since 5.0.
 - Various other documentation updates.

Version 5.0.0 - 11 August 2015
------------------------------
 - Removed support for 'presentation-error' judgement.
 - Various documentation improvements.
 - Preserve aspect ratio when creating testcase image thumbnails.
 - Fixed bug that REST API scoreboard "solved" was always true.
   Thanks Shuhei Takahashi.
 - Make REST API return properly typed values. Thanks Shuhei Takahashi.
 - Synchronise selected contest between jury/team/public interfaces.
 - By default only refresh caches of the selected contest.
 - Show differences of a resubmission with the original submission.
 - Fix length of role DB field. Thanks pinkston3 for pointing out.
 - Update ACE editor to version 1.2.0.
 - Update jQuery to version 2.1.4.
 - Update autoconf M4 macros from upstream.
 - Miscellaneous smaller fixes.

Version 5.0.0 Release Candidate 1 - 7 July 2015
-----------------------------------------------
 - Add support for the problemarchive.org problem package format, thereby
   dropping support for our custom format. In particular, the specification
   of compare scripts has changed.
 - Add support for multiple simultaneous contests.
 - Add support for HTML5 desktop notifications of clarifications,
   judgings and judgehost status (#133).